--- a/style.css
+++ b/style.css
@@ -29,11 +29,6 @@ a {
 	text-decoration: none;
 }
 
-/* section {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-} */
 .container {
 	width: 90%;
 	margin: 0 auto;
@@ -66,4 +61,79 @@ p {
 #navigation .nav-icon svg {
 	width: 80%;
 	color: white;
+}
+
+/*HERO SECTION*/
+
+#hero{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+#hero .left{
+    margin-right: 20px;
+    margin-bottom: 3em;
+}
+#hero .left .spell{
+    color: var(--primary-color);
+    font-weight: 700;
+    padding-left: 0.3em;
+}
+#hero .left .slogan{
+    font-size: 8em;
+    padding-bottom: 0.3em;
+}
+#hero .left h1{
+    line-height: 80px;
+}
+#hero .left .desc{
+    letter-spacing: 2px;
+    font-weight: 400;
+    max-width: 400px;
+    padding-bottom: 1.5em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#hero .left .button a{
+    color: #fff;
+    background-color: var(--primary-color);
+    display: inline-block;  
+    border-radius: 15px;
+    font-size: medium;
+    padding: 0.6em 2em;
+}
+#hero .right{
+    padding-right: 4em;
+}
+#hero .right img{
+    border-radius: 12px;
+    max-width: 650px;
+}
+
+@media(max-width: 768px){
+    #hero{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    #hero .left{
+        text-align: center;
+    }
+    #hero .left .slogan{
+        font-size: 6em;
+    }
+    #hero .left .desc{
+        max-width: 100%;
+    }
+    #hero .left .spell{
+        padding: 8px 0 20px 0;
+    }
+
+    #hero .right{
+        padding: 0;
+    }
+    #hero .right img{
+        max-width: 300px;
+    }
+    
 }
