--- a/style.css
+++ b/style.css
@@ -69,23 +69,54 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 #hero .left{
     margin-right: 20px;
     margin-bottom: 3em;
+    flex: 6;
 }
 #hero .left .spell{
     color: var(--primary-color);
     font-weight: 700;
     padding-left: 0.3em;
+    margin-bottom: 0.5em;
+    animation: fade 0.3s ease-in forwards;
+	animation-delay: 1s;
+	opacity: 0;
 }
 #hero .left .slogan{
-    font-size: 8em;
+    font-size: 5em;
     padding-bottom: 0.3em;
 }
-#hero .left h1{
-    line-height: 80px;
+#hero .left .wrapper{
+    line-height: 50px;
+}
+#hero .left .heading .wrapper {
+	/* position: relative; */
+	/* display: inline-block; */
+	overflow: hidden;
+}
+#hero .left .heading .wrapper span {
+	position: relative;
+	bottom: -70px;
+	animation: reveal 1s ease-in-out forwards;
+}
+@keyframes reveal {
+	0% {
+		bottom: -70px;
+	}
+	100% {
+		bottom: 0px;
+	}
+}
+@keyframes fade {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 #hero .left .desc{
     letter-spacing: 2px;
@@ -93,6 +124,9 @@ p {
     max-width: 400px;
     padding-bottom: 1.5em;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    animation: fade 0.3s ease-in forwards;
+	animation-delay: 1s;
+    opacity: 0;
 }
 
 #hero .left .button a{
@@ -102,13 +136,18 @@ p {
     border-radius: 15px;
     font-size: medium;
     padding: 0.6em 2em;
+    animation: fade 0.3s ease-in forwards;
+	animation-delay: 1s;
+    opacity: 0;
 }
 #hero .right{
     padding-right: 4em;
+    padding-bottom: 4em;
+    flex: 4;
 }
 #hero .right img{
     border-radius: 12px;
-    max-width: 650px;
+    max-width: 500px;
 }
 
 @media(max-width: 768px){
@@ -118,6 +157,7 @@ p {
     }
     #hero .left{
         text-align: center;
+        margin-right: 0;
     }
     #hero .left .slogan{
         font-size: 6em;
@@ -136,4 +176,102 @@ p {
         max-width: 300px;
     }
     
+}
+/* HERO SECTION END */
+
+/* SERVICES SECTION */
+#services{
+    margin-top: 12rem;
+}
+#services .service-heading .heading-services{
+    font-size: 6rem;
+    letter-spacing: 7px;
+    font-weight: 600;
+    text-align: center;
+    position: relative;
+}
+#services .service-heading .heading-services::before{
+    content: "SERVICES";
+    position: absolute;
+    left: 2%;
+    top: -20%;
+    width: 100%;
+    font-size: 6rem;
+    letter-spacing: 7px;
+    font-weight: 600;
+    text-align: center;
+    color: transparent;
+    -webkit-text-stroke: 1.5px #5a24ed2f;
+}
+#services .skills{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 8em;
+}
+
+#services .service{
+    padding: 2em;
+    border-radius: 15px;
+}
+#services .skills .service-web:hover{
+    background-color: rgb(8 69 241 / 35%);
+}
+#services .skills .service-uı-ux:hover{
+    background-color: rgba(0, 255, 115, 0.151);
+}
+#services .skills .service-seo:hover{
+    background-color: #cbbef093;
+}
+#services .service h3{
+    font-size: 2.5em;
+    font-weight: 500;
+    margin: 0.2em 0 0.6em 0;
+}
+#services .service .icon-service{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    padding: 0.75em;
+}
+#services .service .icon-service#web-design{
+    background-color: rgb(7 106 255 / 37%);
+}
+#services .service .icon-service#uı-ux{
+    background-color: rgba(0, 255, 115, 0.493);
+}
+#services .service .icon-service#seo{
+    background-color: #4705fc80;
+}
+
+#services .service .desc{
+    color: var(--secondary-gray);
+    font-size: 1.75rem;
+    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@media(max-width:768px){
+    #services .skills{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    #services .skills .service{
+        margin-bottom: 3em;
+    }
+    #services .skills .icon-service{
+        margin: 0 auto;
+    }
+
+    #services .skills .service-web{
+        background-color: rgb(8 69 241 / 35%);
+    }
+
+    #services .skills .service-uı-ux{
+        background-color: rgba(0, 255, 115, 0.151);
+    }
+    #services .skills .service-seo{
+        background-color: #cbbef093;
+    }
 }
