--- a/style.css
+++ b/style.css
@@ -436,7 +436,6 @@ p {
 /* ABOUT Section*/
 #about{
     margin-top: 22em;
-    margin-bottom: 50em;
 }
 #about .about-me{
     display: flex;
@@ -536,5 +535,144 @@ p {
     }
     #about .about-me .my-expertise .btn-hire-me{
         width: 100%;
+    }
+}
+
+/* PROJECTS SECTION */
+#projects{
+    margin-top: 22em;
+}
+#projects .projects{
+    margin: 3em 0;
+}
+#projects .projects .item{
+    width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 12em auto;
+    
+}
+#projects .projects .item:nth-child(2){
+    flex-direction: row-reverse;
+}
+#projects .projects .item:nth-child(2) .right{
+    margin-right: -150px;
+    margin-left: 0;
+}
+#projects .projects .item .right{
+    margin-left: -150px;
+    z-index: 2;
+    flex: 1;
+    background-color: var(--body-bg);
+    padding: 5rem 3rem;
+    border-radius: 12px;
+    box-shadow: 0px 0px 20px #00000028;
+}
+#projects .projects .item .right .project-heading{
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.75rem;
+   
+}
+#projects .projects .item .right .project-subheading{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.75rem;
+    font-weight: 500;
+    padding-bottom: 0.75em;
+}
+#projects .projects .item .right .project-desc{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: var(--secondary-gray);
+    font-size: 1.6rem;
+    font-weight: 400;
+    letter-spacing: 1.25px;
+    padding-bottom: 1.25em;
+}
+#projects .projects .item .right .btn-know-more{
+    font-size: 1.8rem;
+    letter-spacing: 2px;
+    border: 1px solid var(--primary-color);
+    background-color: var(--primary-color);
+    color: #fff;
+    margin-right: 1.5em;
+}
+#projects .projects .item .right .btn-preview{
+    font-weight: 700;
+    font-size: 1.8rem;
+    padding: 0.5em 1.5em;
+    border: 2px solid var(--primary-color);
+    color: var(--primary-color);
+    display: inline-flex;
+    align-items: center;
+}
+#projects .projects .item .right .btn-preview svg{
+    width: 26px;
+    margin-left: 8px;
+}
+#projects .item .left{
+    flex: 1;
+}
+#projects .projects .item .left .img{
+    overflow: hidden;
+    position: relative;
+    border-radius: 12px;
+    box-shadow: 0px 0px 20px #4705fc33;
+    height: 500px;
+    width: 445px;
+    
+}
+#projects .projects .item .left .img::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 150%;
+    width: 150%;
+    background-color: #5a24ed38;
+}
+
+#projects .projects .item .left .img img{
+    object-fit: cover;
+    transition: 0.3s ease transform;
+}
+#projects .projects .item:hover .left .img img{
+    transform: scale(1.1);
+}
+
+@media(max-width:768px){
+    #projects .projects .item{
+        width: 100%;
+        flex-direction: column;
+    }
+    #projects .projects .item .right{
+        margin-left: 0;
+        margin-top: -150px;
+        width: 90%;
+        padding: 3rem 3rem;
+    }
+    #projects .projects .item:nth-child(2){
+        flex-direction: column;
+    }
+    #projects .projects .item:nth-child(2) .right{
+        margin-right: 0;
+    }
+    #projects .projects .item .left{
+        width: 100%;
+    }
+    #projects .projects .item .left .img{
+        height: 400px;
+        width: auto;
+    }
+}
+@media(max-width:450px){
+    #projects .projects .item .right .btn-know-more{
+        /* margin-right: 1.5em; */
+        text-align: center;
+        width: 100%;
+        margin-bottom: 0.6em;
+    }
+    #projects .projects .item .right .btn-preview{
+        width: 100%;
+        justify-content: center;
     }
 }
