--- a/style.css
+++ b/style.css
@@ -50,10 +50,10 @@ p {
 
 /* NAVIGATION SECTION*/
 #navigation{
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 2em;
-    position: relative;
+    position: fixed;
+    right: 40px;
+    top: 20px;
+    z-index: 5;
 }
 
 #navigation .nav-icon{
@@ -70,6 +70,119 @@ p {
 #navigation .nav-icon svg {
 	width: 80%;
 	color: white;
+}
+
+/* NAV-CONTENT SECTION */
+#nav-content{
+    background-color: var(--secondary-black);
+    width: 60%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 8;
+    color: #fff;
+    position: fixed;
+    right: 0;
+    top: 0;
+    transform: translateX(100%);
+    transition: 0.3s ease transform;
+}
+#nav-content.show{
+    transform: translateX(0);
+    box-shadow: -6px 0px 29px 7px #000000a3;
+}
+#nav-content .close-button{
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    margin: 10px 0 20px 15px;
+    background-color: var(--primary-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s ease-in background-color;
+}
+#nav-content .close-button:hover{
+    background-color: red;
+}
+#nav-content .close-button svg{
+    cursor: pointer;
+    width: 75%;
+}
+#nav-content .nav-item{
+    position: relative;
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#nav-content .nav-item .menu-heading{
+    margin-bottom: 4em;
+    text-align: left;
+}
+#nav-content .nav-item .menu-heading .heading-menu{
+    font-size: 8rem;
+}
+#nav-content .nav-item .menu-heading .heading-menu::before{
+    font-size: 8rem;
+    z-index: -1;
+}
+#nav-content ul li a{
+    display: inline-block;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    letter-spacing: 1.5px;
+    font-size: 5rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-bottom: 2.5rem;
+    font-weight: 700;
+}
+#nav-content ul li a::after {
+    content: attr(data-text);
+    font-size: 3rem;
+    pointer-events: none;
+    position: absolute;
+    right: -350px;
+    bottom: 60%;
+    width: 100%;
+    color: transparent;
+    -webkit-text-stroke: 1.5px #afadad25;
+    opacity: 0;
+    transition: 0.3s ease;
+    transition-property: opacity, transform;
+    z-index: -1;
+    text-align: center;
+    transform: rotate(90deg) scale(2);
+}
+#nav-content ul li a:hover::after {
+	opacity: 1;
+	transform: scale(3) translateY(10px) rotate(90deg);
+}
+@media(max-width:768px){
+    #nav-content{
+        width: 90%;
+    }
+    #nav-content .nav-item{
+        align-items: flex-end;
+        text-align: right;
+        margin-left: 5em;
+    }
+    #nav-content .nav-item ul li a{
+        font-size: 3em;
+    }
+    #nav-content .nav-item .menu-heading .heading-menu{
+        font-size: 3em;
+    }
+    #nav-content .nav-item .menu-heading .heading-menu::before{
+        font-size: 1em;
+        z-index: -1;
+    }
 }
 
 /*HERO SECTION*/
