--- a/style.css
+++ b/style.css
@@ -910,3 +910,156 @@ footer .social-links svg{
         font-size: 1.2rem;
     }
 }
+.contact-heading{
+    margin-top: 6em;
+}
+#contact{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 5rem;
+    margin-top: 6em;
+    margin-bottom: 13em;
+}
+#contact .hire-me{
+    flex: 1;
+}
+#contact .hire-me h2{
+    font-size: 4rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+#contact .hire-me .hire-me-desc{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: var(--secondary-gray);
+    font-size: 1.75rem;
+    font-weight: 600;
+    letter-spacing: 1.25px;
+    padding-bottom: 3rem;
+}
+#contact .hire-me .contact-links li{
+    /* background-color: var(--secondary-gray); */
+    padding: 1rem;
+    border-radius: 12px;
+}
+#contact .hire-me .contact-links li a{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1em;
+}
+#contact .hire-me .contact-links li:hover{
+    background-color: var(--primary-color);
+    border-radius: 12px;
+}
+#contact .hire-me .contact-links li:hover a svg{
+    color: white;
+}
+#contact .hire-me ul li:hover a .hire-me-text{
+    color: white;
+}
+#contact .hire-me ul li a .hire-me-text{
+    display: block;
+    color: var(--secondary-gray);
+    font-size: 2rem;
+    padding-left: 1em;
+}
+#contact .hire-me ul li a .hire-me-icon{
+    color: var(--primary-color);
+    fill: var(--primary-color);
+    display: block;
+}
+#contact .hire-me ul li a svg{
+    max-width: 30px;
+    color: var(--primary-color);
+}
+#contact .hire-me .hire-me-social-links{
+    margin-top: 3em;
+}
+#contact .hire-me .hire-me-social-links ul{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#contact .hire-me .hire-me-social-links ul li:hover svg{
+    transform: scale(1.1);
+}
+#contact .hire-me .hire-me-social-links li svg{
+    width: 40px;
+    cursor: pointer;
+    fill: #311580;
+}
+
+#contact .form-wrapper{
+    flex: 1;
+}
+#contact .form-wrapper form{
+    background-color: var(--primary-color);
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 5rem;
+    border-radius: 12px;
+    color: white;
+}
+#contact .form-wrapper .form-group{
+    padding-bottom: 1.5em;
+}
+#contact .form-wrapper .form-group label{
+    display: inline-block;
+    font-size: 1.8rem;
+}
+#contact .form-wrapper .form-group .input-wrapper {
+    background-color: white;
+    color: black;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 40px;
+    border-radius: 4px;
+    overflow: hidden;
+}
+#contact .form-wrapper .form-group .input-wrapper .input-icon {
+    font-size: 2rem;
+    height: 100%;
+    width: 10%;
+    background-color: rgb(218, 218, 218);
+    margin-right: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#contact .form-wrapper .form-group .input-wrapper .input-icon svg{
+    color: #737274;
+    width: 40px;
+    padding: 0.2em;
+}
+#contact .form-wrapper .form-group .input-wrapper input {
+    padding: 1rem;
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-size: 2rem;
+}
+#contact .form-wrapper .form-group textarea {
+    width: 100%;
+    height: 200px;
+    resize: vertical;
+    font-size: 2rem;
+    padding: 1rem;
+    outline: none;
+    border-radius: 4px;
+}   
+#contact .form-wrapper button{
+    display: inline-block;
+    width: 150px;
+    font-size: 2rem;
+    /* height: auto; */
+    padding: 1rem 0;
+    letter-spacing: 0.3rem;
+    border-radius: 8px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}     
