--- a/style.css
+++ b/style.css
@@ -47,6 +47,29 @@ p {
 	font-size: 1.6rem;
 	color: var(--secondary-black);
 }
+/* SCROLL TOP BUTTON */
+.scroll-top{
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    box-shadow: 0px 0px 20px rgb(71 40 182 / 23%);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    right: 40px;
+    bottom: 20px;
+    border-radius: 10px;
+}
+.scroll-top:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: 0.3s ease-in-out transform;
+}
+.scroll-top svg{
+    width: 20px;
+    height: 20px;
+}
 
 /* NAVIGATION SECTION*/
 #navigation{
@@ -910,6 +933,8 @@ footer .social-links svg{
         font-size: 1.2rem;
     }
 }
+
+/* CONTACT PAGE */ 
 .contact-heading{
     margin-top: 6em;
 }
